<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorShoeItem">

        <ImageView
            android:id="@+id/shoe_image_item"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/shoe1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:width="100dp"
                    android:paddingRight="20dp"
                    android:text="@string/shoe_name" />

                <TextView
                    android:id="@+id/shoe_name_item"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="10sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:width="100dp"
                    android:paddingRight="20dp"
                    android:text="@string/company" />

                <TextView
                    android:id="@+id/company_item"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="10sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:width="100dp"
                    android:paddingRight="20dp"
                    android:text="@string/shoe_size" />

                <TextView
                    android:id="@+id/shoe_size_item"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="10sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:width="100dp"
                    android:paddingRight="20dp"
                    android:text="@string/description" />

                <TextView
                    android:id="@+id/description_item"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="10sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
